--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
   },
   "exports": {
+    ".": "./lib/index.js",
     "./boo": "./lib/middleware/boo/index.js",
     "./foo": "./lib/middleware/foo/index.js"
   },
